# SentinelAntiCheat

./: DASHBOARD_ENHANCEMENTS.md  DEPLOYMENT_INDEX.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  package.json  pnpm-lock.yaml  tsconfig.json
SentinelAntiCheat/: .env  .env.example  README.md
SentinelAntiCheat/backend/: pyproject.toml  sentinel.db
SentinelAntiCheat/backend/calibration/: normalized_games.csv  regan_calibration_profile.example.json  regan_calibration_profile.json  regan_calibration_profile.qa.json
SentinelAntiCheat/backend/data/processed/: lichess_normalized.csv
SentinelAntiCheat/backend/data/raw/: chesscom_usernames.txt  chesscom_usernames_bootstrap.txt  lichess_games_bootstrap.ndjson  lichess_sample.ndjson  lichess_status_map.csv  lichess_users_bootstrap.txt
SentinelAntiCheat/backend/scripts/: build_calibration_profile.py  etl_calibration_dataset.py
SentinelAntiCheat/backend/src/sentinel/: config.py  main.py  schemas.py
SentinelAntiCheat/backend/src/sentinel/domain/: models.py
SentinelAntiCheat/backend/src/sentinel/repositories/: audit.py  supabase.py
SentinelAntiCheat/backend/src/sentinel/services/: calibration.py  feature_pipeline.py  pgn_engine_pipeline.py  phase_filter.py  policy.py  risk_engine.py  signal_layers.py
SentinelAntiCheat/backend/src/sentinel_anti_cheat.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
SentinelAntiCheat/backend/tests/: test_audit_repo.py  test_phase1_policy_and_summary.py  test_phase2_features.py  test_phase3_maia.py  test_pipeline.py
app/: globals.css  layout.tsx  page.tsx
components/: kpi-cards.tsx  (+3 more)
(+15 files in other folders)
